--- a/src/app/pages/features-page/features-page.component.html
+++ b/src/app/pages/features-page/features-page.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
     <div class="card card-cascade wider reverse my-4">
-      <div class="card-body text-center">
+      <div class="card-body text-left">
 
         <!--Section: Features v.2-->
         <section class="section feature-box">
@@ -12,51 +12,64 @@
           <p class="section-description lead grey-text" style="margin-bottom:2rem">Entdecken Sie jetzt die vielfältigen Funktionen und Vorteile von EventPicKing.</p>
 
           <!--Grid row-->
-          <div class="row features-small">
+          <div class="row pb-3">
 
             <!--Grid column-->
-            <div class="col-md-4 mb-r">
-              <div class="col-1 col-md-2 float-left">
-                <i class="fa fa-group blue-text"></i>
-              </div>
+            <div class="col-lg-7">
+
               <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen</h4>
-                <p class="grey-text">Dies ist ein Fülltext. Hier soll beschrieben werden wie die Seite dabei helfen kenn Fotografen und Kunden
-                  zusammenzubringen.</p>
-                <a class="btn btn-primary btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
+                <h4 class="feature-title">Wir bringen Fotografen und Kunden zusammen
+
+                </h4>
+
+                <p class="grey-text">Erstellen Sie ganz einfach ein Event über unser Portal und laden alle Bilder von der gewünschten Veranstaaltung
+                  hoch. Durch einen Link können Sie den Nutzern einen Zugriff auf die Bilder ermöglichen.
+                </p>
+
+                <a class="btn btn-primary btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <br>
+                <br>
               </div>
+
+              <div class="col-10 col-md-9 col-lg-10 float-right">
+                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen
+
+                </h4>
+                <p class="grey-text">Die von Ihnen erstellten Fotos können Sie einfach über unser Portal an Ihre Kunden verkaufen. Sie haben die
+                  Wahl ob dies über eine Druckerei Ihres Vertrauens passiert oder ob die Abwicklung über unsere Druckerei
+                  erfolgen soll.
+                </p>
+                <a class="btn btn-green btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+                <br>
+                <br>
+
+              </div>
+
+              <div class="col-10 col-md-9 col-lg-10 float-right">
+                <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe
+                </h4>
+                <p class="grey-text">Sie suchen für Ihre Veranstaltung einen Fotograf in Ihrer Nähe? Wir bieten Ihnen die Möglichkeit über unser
+                  Portal die besten Fotografen zu finden.</p>
+                <a class="btn btn-pink btn-sm ml-0 waves-light" routerLink="/signup" mdbRippleRadius>Mehr erfahren</a>
+
+                <br>
+                <br>
+              </div>
+
             </div>
             <!--Grid column-->
 
             <!--Grid column-->
-            <div class="col-md-4 mb-r">
-              <div class="col-1 col-md-2 float-left">
-                <i class="fa fa-money pink-text"></i>
-              </div>
-              <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Eventfotos schnell und simpel verkaufen</h4>
-                <p class="grey-text">Hier soll genau beschrieben werden, auf welche Art und Weise Eventfotos verkauft werden können.</p>
-                <a class="btn btn-pink btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
-              </div>
+            <div class="col-5 mb-r center-on-small-only">
+              <img src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg" alt="" class="img-fluid z-depth-0">
             </div>
             <!--Grid column-->
 
-            <!--Grid column-->
-            <div class="col-md-4 mb-r">
-              <div class="col-1 col-md-2 float-left">
-                <i class="fa fa-search purple-text"></i>
-              </div>
-              <div class="col-10 col-md-9 col-lg-10 float-right">
-                <h4 class="feature-title">Finden Sie den passenden Fotografen in Ihrer Nähe</h4>
-                <p class="grey-text">Hier ist eine genaue Beschreibung der Fotografensuche von Nöten. Es soll klar werden, wie der Kunde diese
-                  zu seinem Vorteil nutzen kann.</p>
-                <a class="btn btn-secondary btn-sm ml-0 waves-light" mdbRippleRadius>Mehr erfahren</a>
-              </div>
-            </div>
-            <!--Grid column-->
 
           </div>
           <!--Grid row-->
+
+
 
         </section>
         <!--Section: Features v.2-->
