--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="container card" style="background-color: rgb(223, 233, 255)">
+<div class="container card partition">
 <!-- Header-Section -->
 <div id="header" class="header">
     <div class="container" >
@@ -10,7 +10,7 @@
                 </p>
                 <p>
                 <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
-                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
+                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.FIND_EVENT' | translate }}</button>
             </p>
             </div> <!--col1-end-->
 
@@ -49,7 +49,7 @@
             </p>            
      </div>  <!-- end-container -->
      <div class="container card">
-         <div class="card-body" style="height:500px; overflow-y: auto">
+         <div class="card-body gallery-frame">
                 <div class="col-md-12">
                 <div class="row">
                 <hr>
