--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -7,10 +7,10 @@ body{
     overflow: hidden;
     font-family: 'Open Sans', 'sans-serif';
     text-rendering: optimizeLegibility !important;
-    -webkit-font-smoothing: antialiased !important;
-    
-    
+    -webkit-font-smoothing: antialiased !important;       
 }
+
+
 
 li{
     list-style: none;
@@ -38,6 +38,10 @@ h4{
 p{
     font-size: 15px;
     font-weight: 21px; 
+}
+
+.partition{
+    background-color:#e8eaf6;
 }
 
 .btn{
@@ -80,51 +84,37 @@ p{
     -moz-background-size: cover;
     -o-background-size: cover;
     color: #fff;
+
+
+
+     img{
+            height: 350px;
+            width: 400px;
+            margin: 70px 0 40px;
+    }
+
+    h1{
+        font-size: 40px;
+        font-weight: 700;
+        padding-top: 150px;
+        text-transform: none;
+    }
+
+    p{
+        margin-top: 30px;
+    }
+
+     button{
+        margin-top: 30px;
+        margin-left: 30px;
+    }
+
+     btn{
+        border-radius: 0;
+        margin: 40px, 20px;
+    }
 }
 
-
-
-.header img{
-    height: 350px;
-    width: 400px;
-    margin: 70px 0 40px;
-}
-
-.header h1{
-    font-size: 40px;
-    font-weight: 700;
-    padding-top: 150px;
-    text-transform: none;
-}
-
-.header p{
-    margin-top: 30px;
-}
-// .header h1{
-//     margin-top: 20px;
-//     // padding-left: 20%;
-// }
-
-.header button{
-    margin-top: 30px;
-    margin-left: 30px;
-}
-
-.header btn{
-    border-radius: 0;
-    margin: 40px, 20px;
-}
-
-// .btn-frame{
-//     margin-left:200px;
-//     margin-right:30px;
-// }
-
-// .headingtext{
-//     position: absolute;
-//     left: 300px;
-//     top: -50px;
-// }
 
 @media(max-width: 750px){
     .header{
@@ -174,23 +164,40 @@ p{
 
 
 
-//GALLERY              
+//GALLERY  
+.gallery-frame{
+    height:500px;
+    overflow-y: auto;
+}            
+
 .gallery{
     padding: 80px 0 80px;
     text-align: center;
     background-color: white;
+    
+    h2,
+    h4{
+        color: #4c4c4c;
+        margin: 20px 0 20px;
+    }
+    
+    p{
+        color: #737373;
+        font-size:14px;
+        padding-bottom: 40px;
+    }
 
-}
+    img{ 
+        width: 100%; 
+        padding: 7px 0;
+    }
+
+}//gallery
 
 .gal {
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
-    column-count: 3;	  	
-    }	
-    
-.gal img{ 
-    width: 100%; 
-    padding: 7px 0;
+    column-count: 3;	  	 
 }
 
 @media (max-width: 500px) {
@@ -202,41 +209,27 @@ p{
 	}
 
 
-.gallery h2,
-.gallery h4{
-    color: #4c4c4c;
-    margin: 20px 0 20px;
-}
-
-.gallery p{
-    color: #737373;
-    font-size:14px;
-    padding-bottom: 40px;
-}
-
 .subtitle{
     width: auto;
     position: relative;
     // border: 5px solid red;
-}
 
-.subtitle span{
-    // background-color: rgb(71, 67, 67);
-   // background-color: hsla(0, 0%, 100%, 0.5);
-    background-color: #2E2E2E;
-    background-color: hsla(0, 0%, 1%, 0.5);
-    color: white;
-    position: absolute;
-    left: 0px;
-    bottom: 7px;
-    width: 100%;
-    line-height: 2em;
-    text-align: center;
-}
+     span{
+        background-color: #2E2E2E;
+        background-color: hsla(0, 0%, 1%, 0.5);
+        color: white;
+        position: absolute;
+        left: 0px;
+        bottom: 7px;
+        width: 100%;
+        line-height: 2em;
+        text-align: center;
+    }
 
-.subtitle img{
-    display: block;
-}
+    img{
+     display: block;
+    }
+}//subtitle
 
 @media(max-width:768px){
     .services{
@@ -254,26 +247,23 @@ p{
 // TESTIMONIAL
 .testimonial{
     padding: 80px 0 80px;
-    text-align: center;
-    
-}
+    text-align: center;    
 
-.testimonial b,
-.testimonial h2,
-.testimonial h4{
-    margin: 30px 0 30px;
-    color: #4c4c4c;
-}
+    b,
+    h2,
+    h4{
+        margin: 30px 0 30px;
+        color: #4c4c4c;
+    }
 
-.testimonial p{
-    color: #737373;
-}
+     p{
+         color: #737373;
+    }
 
-.testimonial img{
-    height: 150px;
-    width: 150px;
-    margin-top: 80px;
-}
+    img{
+        height: 150px;
+        width: 150px;
+        margin-top: 80px;
+    }
+}//testimonial
 
-// ____________________________________________________________________________________________-
-//MODAL:
