shopping-cart functionality
added the functionality of the shopping-cart, included: dynamic table row generation, ability to change the amount of print items, calculate item prices, calculate shopping cart total price, ability to delete shopping cart items.
Changed design of shopping cart table

--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,8 @@
-<div class="row mt-5 pt-5">
+<div class="row m-5 p-5">
   <div class="col text-center">
     <h1>{{ 'LABELS.SHOPPING_CART' | translate }}</h1>
     <!--
+      Symbole:
       Papierkorb: <i class="fa fa-trash" aria-hidden="true"></i>
       Drucker: <i class="fa fa-print" aria-hidden="true"></i>
       Download: <i class="fa fa-download" aria-hidden="true"></i>
@@ -9,66 +10,61 @@
     -->
     <br/>
     <table class="table table-striped table-responsive-sm">
+      <!-- Table headings -->
       <thead id="sum_row">
         <tr>
-          <th scope="col">{{ 'LABELS.CART_QUANTITY' | translate }}</th>
-          <th scope="col">{{ 'LABELS.CART_PICTURE' | translate }}</th>
-          <th scope="col">
-            <i class="fa fa-lg fa-print" aria-hidden="true"></i>
-          </th>
-          <th scope="col">
-            <i class="fa fa-lg fa-download" aria-hidden="true"></i>
-          </th>
-          <th scope="col">{{ 'LABELS.CART_SIZE' | translate }}</th>
-          <th scope="col">{{ 'LABELS.CART_PRICE' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_EVENT' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_PICTURE' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_TYPE' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_SIZE' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_QUANTITY' | translate }}</th>
+          <th scope="col">{{ 'NAV.CART_PRICE' | translate }}</th>
           <th scope="col"></th>
         </tr>
       </thead>
+      <!-- END table headings-->
       <tbody>
-        <tr>
-          <th>
-            <div class="btn-group btn-group-sm" role="group" aria-label="First group">
-              <button type="button" class="btn btn-secondary" (click)="decreaseQuantity(quantityBox.value)">
-                <i class="fa fa-minus-circle"></i>
-              </button>
-              <input #quantityBox type="text">
-              <button type="button" class="btn btn-secondary">
-                <i class="fa fa-plus-circle"></i>
-              </button>
-            </div>
-          </th>
-          <td>THUMB-NAIL PICTURE_NAME</td>
+        <!-- dynamic table row that iterates through shoppingCartItems array -->
+        <tr *ngFor="let cartItem of cartItems">
           <td>
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio1">
-              <label for="radio1"></label>
-            </div>
+            {{cartItem.eventname}}
           </td>
           <td>
-            <div class="form-group">
-              <input name="group1" type="radio" class="with-gap" id="radio2">
-              <label for="radio2"></label>
-            </div>
+            <img src="{{cartItem.url}}" class="img-thumbnail mr-2" /> {{cartItem.key}}
           </td>
-          <td>PICTURE_SIZE</td>
-          <td>PICTURE_PRICE</td>
           <td>
-            <i class="fa fa-lg fa-trash" aria-hidden="true"></i>
+            <i *ngIf="cartItem.format.type == 'print'" class="fa fa-print fa-lg" aria-hidden="true"></i>
+            <i *ngIf="cartItem.format.type == 'download'" class="fa fa-download fa-lg" aria-hidden="true"></i>
+          </td>
+          <td>{{cartItem.format.width}}x{{cartItem.format.height}}</td>
+          <td>
+            <i *ngIf="cartItem.format.type == 'print'" class="fa fa-chevron-left fa-lg clickable pl-2 pr-2" aria-hidden="true" (click)="decreaseQuantity(cartItem)"></i>
+            <span>{{cartItem.amount}}</span>
+            <i *ngIf="cartItem.format.type == 'print'" class="fa fa-chevron-right fa-lg clickable pl-2 pr-2" aria-hidden="true" (click)="increaseQuantity(cartItem)"></i>
+          </td>
+          <td>{{cartItem.totalPrice | number:'0.2-2' | replace:'.':','}}€</td>
+          <td>
+            <i class="fa fa-lg fa-trash clickable" aria-hidden="true" (click)="deleteCartItem(cartItem)"></i>
           </td>
         </tr>
+        <!-- END dynamic table row -->
+        <!-- Sum row -->
         <tr class="table-primary">
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td>{{ 'LABELS.TOTAL' | translate }}</td>
-          <td>PRICE</td>
+          <td>{{sum | number:'0.2-2' | replace:'.':','}}€</td>
           <td></td>
         </tr>
+        <!-- END sum row -->
       </tbody>
     </table>
+    <!-- Buttons to previous or next step -->
     <div class="row justify-content-end">
       <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
       <button type="button" class="btn btn-primary waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
     </div>
+    <!-- END buttons -->
   </div>
