--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -1,3 +1,95 @@
-<p>
-  event-user works!
-</p>
+<div class="card">
+  <h3 class="card-header indigo white-text">Eventnummer</h3>
+
+  <div class="card-body">
+    <h4 class="card-title">Datum und Ort</h4>
+    <p class="card-text">Beschreibung des Events</p>
+  </div>
+</div>
+
+<br>
+<br>
+
+<nav id="main_menu">
+  <mdb-tabset [buttonClass]="'nav-tabs tabs-3 indigo'" [contentClass]="''">
+    <mdb-tab heading="Alle Bilder">
+      <div class="row" style="align-self: center">
+
+        <a class="btn btn-indigo darken-2 waves-light col-3" id="button_select_all_pictures" mdbRippleRadius>Alle Bilder auswählen</a>
+
+        <a class="btn btn-indigo darken-2 waves-light col-3" id="button_add_choosen_to_card" mdbRippleRadius>Ausgewählte Bilder
+          <br>in den Warenkorb legen</a>
+
+        <a class="icon-button" id="button_search_picture" style="color: #3f51b5">
+          &nbsp;
+          <i class="fa fa-search fa-3x lessVertical-1 indigoIcon" aria-hidden="true">&nbsp;</i>
+        </a>
+
+        <a class="icon-button" id="button_one_picture_per_row" style="color: #3f51b5">
+          &nbsp;
+          <i class="fa fa-square fa-3x lessVertical-2" aria-hidden="true">&nbsp;</i>
+        </a>
+
+        <a class="icon-button" id="button_two_pictures_per_row" style="color: #3f51b5">
+          &nbsp;
+          <i class="fa fa-th-large fa-3x lessVertical-2" aria-hidden="true">&nbsp;</i>
+        </a>
+
+        <a class="icon-button" id="button_three_pictures_per_row" style="color: #3f51b5">
+          &nbsp;
+          <i class="fa fa-th fa-3x lessVertical-2" aria-hidden="true"></i>
+        </a>
+
+
+        <table>
+          <td>
+            <div class="card align-items-center">
+              <img class="img-fluid" src="https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg"
+                width="328" height="250" alt="Card image cap" div class="box1">
+              <div class="card-body">
+                <table>
+                  <td>
+                    <a href="#" class="icon-button" id="Button_Bild1_markieren" style="color: #3f51b5">
+                      <i class="fa fa-star fa-3x" aria-hidden="true">&nbsp;</i>
+                    </a>
+                  </td>
+
+                  <td>
+                    <a href="#" class="icon-button" id="Button_Bild1_liken" style="color: #3f51b5">
+                      &nbsp;
+                      <i class="fa fa-heart fa-3x" aria-hidden="true">&nbsp;</i>
+                    </a>
+                  </td>
+
+                  <td>
+                    <a href="#" class="icon-button" id="Button_Bild1_melden" style="color: #3f51b5">
+                      &nbsp;
+                      <i class="fa fa-exclamation-triangle fa-3x" aria-hidden="true">&nbsp;</i>
+                    </a>
+                  </td>
+
+                </table>
+              </div>
+            </div>
+          </td>
+        </table>
+      </div>
+    </mdb-tab>
+
+
+    <mdb-tab heading="Markierte Bilder">
+      <div class="row">
+        <div class="col-12">
+          <br>
+          <p>Hallo i bims</p>
+        </div>
+      </div>
+    </mdb-tab>
+  </mdb-tabset>
+</nav>
+
+<section id="main_section">
+
+  <!-- Hier kp (Body)-->
+
+</section>
