--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -1,9 +1,8 @@
 <div class="card">
-  <h3 class="card-header indigo white-text">Eventnummer</h3>
-
+  <h3 class="card-header indigo white-text">Eventname</h3>
   <div class="card-body">
     <h4 class="card-title">Datum und Ort</h4>
-    <p class="card-text">Beschreibung des Events</p>
+    <p class="card-text">Beschreibung</p>
   </div>
 </div>
 
@@ -12,84 +11,100 @@
 
 <nav id="main_menu">
   <mdb-tabset [buttonClass]="'nav-tabs tabs-3 indigo'" [contentClass]="''">
-    <mdb-tab heading="Alle Bilder">
-      <div class="row" style="align-self: center">
+    <mdb-tab heading="{{ 'TEXTS.EVENT_ALL_PICTURES' | translate}}">
+      <div class="col">
+        <div class="row no-gutters justify-content-start" style="align-items: center">
 
-        <a class="btn btn-indigo darken-2 waves-light col-3" id="button_select_all_pictures" mdbRippleRadius>Alle Bilder auswählen</a>
+          <div class="col-3">
+            <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" href="" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
+          </div>
 
-        <a class="btn btn-indigo darken-2 waves-light col-3" id="button_add_choosen_to_card" mdbRippleRadius>Ausgewählte Bilder
-          <br>in den Warenkorb legen</a>
+          <div class="col-4">
+            <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+          </div>
 
-        <a class="icon-button" id="button_search_picture" style="color: #3f51b5">
-          &nbsp;
-          <i class="fa fa-search fa-3x lessVertical-1 indigoIcon" aria-hidden="true">&nbsp;</i>
-        </a>
+          <div class="col-3"></div>
 
-        <a class="icon-button" id="button_one_picture_per_row" style="color: #3f51b5">
-          &nbsp;
-          <i class="fa fa-square fa-3x lessVertical-2" aria-hidden="true">&nbsp;</i>
-        </a>
-
-        <a class="icon-button" id="button_two_pictures_per_row" style="color: #3f51b5">
-          &nbsp;
-          <i class="fa fa-th-large fa-3x lessVertical-2" aria-hidden="true">&nbsp;</i>
-        </a>
-
-        <a class="icon-button" id="button_three_pictures_per_row" style="color: #3f51b5">
-          &nbsp;
-          <i class="fa fa-th fa-3x lessVertical-2" aria-hidden="true"></i>
-        </a>
-
-
-        <table>
-          <td>
-            <div class="card align-items-center">
-              <img class="img-fluid" src="https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg"
-                width="328" height="250" alt="Card image cap" div class="box1">
-              <div class="card-body">
-                <table>
-                  <td>
-                    <a href="#" class="icon-button" id="Button_Bild1_markieren" style="color: #3f51b5">
-                      <i class="fa fa-star fa-3x" aria-hidden="true">&nbsp;</i>
-                    </a>
-                  </td>
-
-                  <td>
-                    <a href="#" class="icon-button" id="Button_Bild1_liken" style="color: #3f51b5">
-                      &nbsp;
-                      <i class="fa fa-heart fa-3x" aria-hidden="true">&nbsp;</i>
-                    </a>
-                  </td>
-
-                  <td>
-                    <a href="#" class="icon-button" id="Button_Bild1_melden" style="color: #3f51b5">
-                      &nbsp;
-                      <i class="fa fa-exclamation-triangle fa-3x" aria-hidden="true">&nbsp;</i>
-                    </a>
-                  </td>
-
-                </table>
-              </div>
-            </div>
-          </td>
-        </table>
-      </div>
-    </mdb-tab>
-
-
-    <mdb-tab heading="Markierte Bilder">
-      <div class="row">
-        <div class="col-12">
-          <br>
-          <p>Hallo i bims</p>
+          <div class="col-2">
+            <a class="icon-button" data-toggle="tooltip" data-placement="bottom" title="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" id="button_search_picture"
+              style="color: #3f51b5" href="">
+              <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+            </a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
+              <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
+              <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
       </div>
+      <br>
+
+      <!-- BILD -->
+      <table>
+        <td>
+          <div class="card align-items-center">
+            <img class="img-fluid" src="https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg"
+              width="328" height="250" alt="Card image cap" div class="box1">
+            <div class="card-body">
+              <table>
+                <td>
+                  <a href="#" class="icon-button" id="Button_Bild1_markieren" style="color: #3f51b5">
+                    <i class="fa fa-star fa-3x" aria-hidden="true">&nbsp;</i>
+                  </a>
+                </td>
+
+                <td>
+                  <a href="#" class="icon-button" id="Button_Bild1_liken" style="color: #3f51b5">
+                    &nbsp;
+                    <i class="fa fa-heart fa-3x" aria-hidden="true">&nbsp;</i>
+                  </a>
+                </td>
+
+                <td>
+                  <a href="#" class="icon-button" id="Button_Bild1_melden" style="color: #3f51b5">
+                    &nbsp;
+                    <i class="fa fa-exclamation-triangle fa-3x" aria-hidden="true">&nbsp;</i>
+                  </a>
+                </td>
+              </table>
+            </div>
+          </div>
+        </td>
+      </table>
+      <!-- BILD -->
+    </mdb-tab>
+
+    <mdb-tab heading="{{ 'TEXTS.EVENT_SELECTED_PICTURES' | translate}}">
+        <div class="col">
+            <div class="row no-gutters justify-content-start" style="align-items: center">
+
+              <div class="col-4">
+                <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+              </div>
+
+              <div class="col-6"></div>
+
+              <div class="col-2">
+                <a class="icon-button" data-toggle="tooltip" data-placement="bottom" title="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" id="button_search_picture"
+                  style="color: #3f51b5" href="">
+                  <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+                </a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
+                  <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
+                </a>
+                &nbsp;&nbsp;
+                <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
+                  <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <br>
     </mdb-tab>
   </mdb-tabset>
 </nav>
-
-<section id="main_section">
-
-  <!-- Hier kp (Body)-->
-
-</section>
