--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -23,14 +23,16 @@
             <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
           </div>
 
-          <div class="col-3"></div>
+          <div class="col-1"></div>
 
-          <div class="col-2">
-            <a class="icon-button" data-toggle="tooltip" data-placement="bottom" title="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" id="button_search_picture"
-              style="color: #3f51b5" href="">
-              <i class="fa fa-search fa-2x" aria-hidden="true"></i>
-            </a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <div class="col-3">
+            <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
+              <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
+              <label for="search_photo"></label>
+            </div>
+          </div>
+
+          <div class="col-1">
             <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
               <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
             </a>
@@ -79,32 +81,34 @@
     </mdb-tab>
 
     <mdb-tab heading="{{ 'TEXTS.EVENT_SELECTED_PICTURES' | translate}}">
-        <div class="col">
-            <div class="row no-gutters justify-content-start" style="align-items: center">
+      <div class="col">
+        <div class="row no-gutters justify-content-start" style="align-items: center">
 
-              <div class="col-4">
-                <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
-              </div>
+          <div class="col-4">
+            <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+          </div>
 
-              <div class="col-6"></div>
+          <div class="col-4"></div>
 
-              <div class="col-2">
-                <a class="icon-button" data-toggle="tooltip" data-placement="bottom" title="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" id="button_search_picture"
-                  style="color: #3f51b5" href="">
-                  <i class="fa fa-search fa-2x" aria-hidden="true"></i>
-                </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
-                  <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
-                </a>
-                &nbsp;&nbsp;
-                <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
-                  <i class="fa fa-th fa-2x" aria-hidden="true"></i>
-                </a>
-              </div>
+          <div class="col-3">
+            <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
+              <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
+              <label for="search_photo"></label>
             </div>
           </div>
-          <br>
+
+          <div class="col-1">
+            <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
+              <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
+              <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <br>
     </mdb-tab>
   </mdb-tabset>
 </nav>
