--- a/src/app/pages/checkout-page/checkout-page.component.html
+++ b/src/app/pages/checkout-page/checkout-page.component.html
@@ -35,115 +35,187 @@
   </ng-template>
 
   <ng-template #checkoutContactDetails>
-    <div>
-      <h2>{{ 'LABELS.CONTACT_DETAILS' | translate }}</h2>
-      <p>-KUNDENEMAIL-</p>
-      <hr class="m-5">
-      <h2>{{ 'LABELS.DELIVERY_ADDRESS' | translate }}</h2>
-      <p>--VORNAME-- --NACHNAME--</p>
-      <p>--STRASSE-- --HAUSNR--</p>
-      <p>--STADT--</p>
-      <p>--PLZ--</p>
-      <p>--LAND--</p>
-
-
-    </div>
+    <div class="container">
+        <h2>{{ 'LABELS.CONTACT_DETAILS' | translate }}</h2>
+        <p>-KUNDENEMAIL-</p>
+        <br>
+      <div class="row">
+        <div class="col-6">
+                    <h2>{{ 'LABELS.DELIVERY_ADDRESS' | translate }}</h2> 
+                    <p>--VORNAME-- --NACHNAME--</p>
+                    <p>--STRASSE-- --HAUSNR--</p>
+                    <p>--STADT--</p>
+                    <p>--PLZ--</p>
+                    <p>--LAND--</p>
+        </div><!--col1-->
+        <div class="col-6">
+            <!-- <label class="custom-control custom-radio">
+                <input id="radio2" name="radio" type="radio" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description faded"> -->
+            <label class="custom-control custom-checkbox">
+              <input id="check" type="checkbox" class="custom-control-input">
+                <span  class="custom-control-indicator"></span>
+                <label for="check">
+                <span  class="custom-control-description faded">
+                  <h2>{{ 'LABELS.BILLING_ADDRESS' | translate }}</h2> 
+                  <p>--VORNAME-- --NACHNAME--</p>
+                  <p>--STRASSE-- --HAUSNR--</p>
+                  <p>--STADT--</p>
+                  <p>--PLZ--</p>
+                  <p>--LAND--</p>
+               </span>
+              </label>
+           </label>
+         </div> <!--col1-->
+      </div><!--row-->
+      <div class="row justify-content-end">
+           <p>
+              <button id="checkout3_back" type="button" class="btn btn-outline-primary waves-effect" mdbRippleRadiusr>{{ 'BUTTONS.BACK' | translate }}</button>
+              <button id="checkout3_send_order" type="button" class="btn btn-outline-primary waves-effect"  mdbRippleRadius>{{ 'BUTTONS.NEXT' | translate }}</button>
+           </p>
+      </div>
+      </div><!--container-->
   </ng-template>
 
   <ng-template #checkoutPaymentDelivery>
-    <div>PaymentDelivery</div>
+    <div class="container">
+        <h2>{{ 'LABELS.PAYMENT_SHIPPING_DETAILS' | translate }}</h2>
+        <br>
+      <div class="row justify-content-left">
+        <div class="col-12">
+            <h3>{{ 'LABELS.PAYMENT_METHOD' | translate }}</h3>
+          <!-- PayPal Logo -->        
+             <a href="https://www.paypal.com/de/webapps/mpp/paypal-popup" title="So funktioniert PayPal" >
+              <img src="https://www.paypalobjects.com/webstatic/de_DE/i/de-pp-logo-150px.png" border="0" alt="PayPal Logo" />
+            </a> <!-- PayPal Logo -->
+        </div><!--col1-->
+      </div><!--row-->
+      <div class="row justify-content-left">
+        <div class="col-8">
+          <p class="padded">Nach dem Abschicken des Auftrags werden Sie auf die offizielle PayPal-Seite geleitet, um dort komfortabel
+            und sicher zu bezahlen.
+          </p>
+        </div><!--col1-->
+      </div><!--row-->
+      <div class="row justify-content-left">
+        <div class="col-12">
+        <h3>{{ 'LABELS.PAYMENT_METHOD' | translate }}</h3>
+        </div><!--col1-->
+      </div><!--row-->
+      <div class="row">
+        <div class="col-9">
+          <p>Standard: Lieferung in 7-10 Tagen</p>
+        </div><!--col1-->
+       <div class="col-3">
+         <p class="price">4,95€</p>
+       </div><!--col2-->
+      </div><!--row-->
+       <!-- Buttons to previous or next step -->
+       <div class="row justify-content-end">
+          <button id="checkout3_back" type="button" class="btn btn-outline-primary waves-effect" mdbRippleRadius>{{ 'BUTTONS.BACK' | translate }}</button>
+          <button id="checkout3_send_order" type="button" class="btn btn-outline-primary waves-effect"  mdbRippleRadius>{{ 'BUTTONS.NEXT' | translate }}</button>
+        <!-- END buttons -->
+      </div><!--row-->
+    </div><!--container--> 
   </ng-template>
 
   <ng-template #checkoutCheckOrder>
-      <table class="table table-bordered table-striped table-responsive-sm">
-          <thead>
-            <tr>
-              <th scope="col">{{ 'NAV.CART_QUANTITY' | translate }}</th>
-              <th>Item</th>
-              <th><i class="fa fa-print fa-lg" aria-hidden="true"></i></th>
-              <th><i class="fa fa-download fa-lg" aria-hidden="true"></i></th>
-              <th scope="col">{{ 'NAV.CART_SIZE' | translate }}</th>
-              <th scope="col">{{ 'NAV.CART_PRICE' | translate }}</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <!-- <th scope="row">1</th> -->
-              <td>2</td>
-              <td>
-                  <img src="http://www.bild.de/politik/ausland/wladimir-putin/interview-mit-dem-russischen-praesidenten-44096422.bild.html" class="img-thumbnail mr-2" > 
-                </td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                <td></td>
-                <td>1230x1230</td>
-                <td>90€</td>
-                <td>
-                  <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
-                </td>
+    <div class="container">
+        <h2>{{ 'LABELS.ORDER_DETAILS' | translate }}</h2>
+        <br>
+      <div class="row">
+        <div class="col-12">
+        <table class="table table-striped table-responsive-sm">
+            <thead id="sum_row">
+              <tr>
+                <th scope="col">{{ 'NAV.CART_QUANTITY' | translate }}</th>
+                <th>Item</th>
+                <th><i class="fa fa-print fa-lg" aria-hidden="true"></i></th>
+                <th><i class="fa fa-download fa-lg" aria-hidden="true"></i></th>
+                <th scope="col">{{ 'NAV.CART_SIZE' | translate }}</th>
+                <th scope="col">{{ 'NAV.CART_PRICE' | translate }}</th>
               </tr>
-            <tr>
-              <!-- <th scope="row">2</th> -->
-              <td>2</td>
-              <td>
-                  <img src="http://www.bild.de/politik/ausland/wladimir-putin/interview-mit-dem-russischen-praesidenten-44096422.bild.html" class="img-thumbnail mr-2" > 
-                </td>
-                <td></td>
-                <td><i class="fa fa-check" aria-hidden="true"></i></td>
-                <td>1230x1230</td>
-                <td>90€</td>
-                <td>
-                  <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
-                </td>
-              </tr>           
-            <tr>
-              <!-- <th scope="row">3</th> -->
-              <td>2</td>
-              <td>
-                  <img src="http://www.bild.de/politik/ausland/wladimir-putin/interview-mit-dem-russischen-praesidenten-44096422.bild.html" class="img-thumbnail mr-2" > 
-                </td>
-                <td><i class="fa fa-check" aria-hidden="true"></i> </td>
-                <td></td>
-                <td>1230x1230</td>
-                <td>90€</td>
-                <td>
-                  <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
-                </td>
-            </tr>
-            <tr class="table-bordered">
-                <td>Zwischensumme</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>20€</td>
-                <td></td>
-            </tr> 
-            <tr class="table-bordered">
-                <td>+ Versandkosten</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>20€</td>
-                <td></td>
-            </tr>      
-            <tr class="table-bordered">
-                <td>{{'LABELS.TOTAL'|translate}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>20€</td>
-                <td></td>
-            </tr>        
-          </tbody>
-        </table>
-         <!-- Buttons to previous or next step -->
-         <div class="text-centre">
+            </thead>
+            <tbody>
+              <tr class="table-bordered">
+                <!-- <th scope="row">1</th> -->
+                <td>2</td>
+                <td>img 20150226_061339</td>
+                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                  <td></td>
+                  <td>1230x1230</td>
+                  <td>90€</td>
+                  <td class="background-white">
+                    <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
+                  </td>
+                </tr>
+              <tr class="table-bordered">
+                <!-- <th scope="row">2</th> -->
+                <td>10</td>
+                <td>img 20150226_0613456</td>
+                  <td></td>
+                  <td><i class="fa fa-check" aria-hidden="true"></i></td>
+                  <td>1230x1230</td>
+                  <td>90€</td>
+                  <td class="background-white">
+                    <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
+                  </td>
+                </tr>           
+              <tr class="table-bordered">
+                <!-- <th scope="row">3</th> -->
+                <td>1</td>
+                <td>img 20150226_0613457</td>                
+                  <td><i class="fa fa-check" aria-hidden="true"></i> </td>
+                  <td></td>
+                  <td>1230x1230</td>
+                  <td>90€</td>
+                  <td class="background-white">
+                    <i class="fa fa-lg fa-trash clickable" aria-hidden="true" ></i>
+                  </td>
+              </tr>
+              <tr class="table background-white">
+                  <td>Zwischensumme</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>20€</td>
+              </tr> 
+              <tr class="table  background-white">
+                  <td>+ Versandkosten</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>20€</td>
+              </tr>      
+              <tr class="table  background-white">
+                  <td>{{'LABELS.TOTAL'|translate}}</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>20€</td>
+              </tr>        
+            </tbody>
+          </table>
+      </div><!--col1-->
+    </div><!--row-->
+    <div class="row">
+      <div class="col-12">       
+         <br>
            Indem du deine Bestellung aufgibst, akzeptierst du unsere Allgemeinen Geschäftsbedingungen und unsere Datenschutzrichtlinie.
-         </div>
-    <div class="row justify-content-end">
-        <button id="checkout3_back" type="button" class="btn btn-primary waves-light" mdbRippleRadius>{{ 'BUTTONS.BACK' | translate }}</button>
-        <button id="checkout3_send_order" type="button" class="btn btn-primary waves-light"  mdbRippleRadius>{{ 'BUTTONS.SEND_ORDER' | translate }}</button>
-      </div>
+         <br>
+          </div><!--col-->
+    </div><!--row-->
+         <!-- Buttons to previous or next step -->
+      <div class="row justify-content-end">
+        <button id="checkout3_back" type="button" class="btn btn-outline-primary waves-effect" mdbRippleRadius>{{ 'BUTTONS.BACK' | translate }}</button>
+        <button id="checkout3_send_order" type="button" class="btn btn-outline-primary waves-effect"  mdbRippleRadius>{{ 'BUTTONS.SEND_ORDER' | translate }}</button>
       <!-- END buttons -->
+    </div><!--row-->
+  </div><!--container-->
   </ng-template>
   <!--END checkout-templates-->
 </div>
