--- a/src/app/pages/photographer-search-page/photographer-search-page.component.scss
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.scss
@@ -3,3 +3,23 @@
   max-width: 50px;
   max-height: 50px;
 }
+
+.scrollable {
+  height: 450px;
+  overflow-y: scroll;
+}
+
+.mapformat {
+  height: 500px;
+  width: 100%;
+}
+
+.card {
+  margin: 10px;
+}
+
+.card-text {
+  font-size: 18px;
+  vertical-align: top;
+  text-align: center;
+}
