--- a/src/app/pages/event-page/event-page.component.html
+++ b/src/app/pages/event-page/event-page.component.html
@@ -19,3 +19,7 @@
 <ng-template #eventNotFound>
   <h1>Event not found</h1>
 </ng-template>
+
+<ng-template #eventDeleted>
+  <h1>Event deleted</h1>
+</ng-template>
