--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -7,13 +7,13 @@
       <!--site-navbar-->
       <div id="navbar" class="row justify-content-md-center">
         <div class="col-md-auto">
-          <a mdbPageScroll id="navelement" href="#description">{{ 'NAV.DESCRIPTION' | translate }}</a>
+          <a mdbPageScroll id="navelement" href="#description" [pageScrollDuration]="300">{{ 'NAV.DESCRIPTION' | translate }}</a>
         </div>
         <div class="col-md-auto">
-          <a mdbPageScroll id="navelement" href="#events">{{ 'NAV.EVENTS' | translate }}</a>
+          <a mdbPageScroll id="navelement" href="#events" [pageScrollDuration]="300">{{ 'NAV.EVENTS' | translate }}</a>
         </div>
         <div class="col-md-auto">
-          <a mdbPageScroll id="navelement" href="#prices">{{ 'NAV.PRICES' | translate }}</a>
+          <a mdbPageScroll id="navelement" href="#prices" [pageScrollDuration]="300">{{ 'NAV.PRICES' | translate }}</a>
         </div>
       </div>
       <!--END site-navbar-->
