Removed Find-Event-Button and Replaced Lorem Ipsum

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -40,6 +40,10 @@ p{
     font-weight: 21px; 
 }
 
+.fa-heart{
+    color:white;
+}
+
 .partition{
     background-color:#e8eaf6;
 }
@@ -120,34 +124,35 @@ p{
     .header{
         padding: 30px;
         height: 750px;
-    }
+   
 
-    .header img{
+        img{
         width: 90%;
         height: 300px;
         margin: 20px 0 20px;
-    }
+        }
 
-    .header btn{
+        btn{
         font-size: 10px;
         margin-left: 20px;
        
-    }
+        }
 
-    .header button{
+        button{
         margin-top: 20px;
         margin-left: 20px;
         font-size: 10px;
-    }
+        }
 
-    .header h1{
+        h1{
         font-size: 20px;
-    }
+        }
 
-    .header p{
+        p{
         margin-top: 10px;
         font-size: 10px;
-    }
+        }
+    }//header-media
 
     .btn-frame{
         margin-left:50px;
