--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,15 +2,17 @@
 <!-- Header-Section -->
 <div id="header" class="header">
     <div class="container" >
-        <div class="row ">
-            <div class="col-lg-12 col-md-12 text-center"> 
+        <div class="row justify-content-center">
+            <div class="col-6  text-center"> 
                 <h1>EventPickKing </h1>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-                    sed diam nonumy eirmod tempor invidunt
+                <br>
+                <h5>Willkommen bei ihrem Spezialisten für Event-Fotografie</h5>
+                <p>
+                    Finden sie einen Fotografen für ihr Event, kaufen sie schnell und bequem ihre Bilder online,
+                     oder registrieren sie sich als Fotograf um für Events gebucht zu werden!
                 </p>
                 <p>
-                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
-                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.FIND_EVENT' | translate }}</button>
+                <button id="landing_signup" class="btn btn-outline-info btn-rounded waves-effec" routerLink="/signup">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
             </p>
             </div> <!--col1-end-->
 
@@ -45,7 +47,8 @@
 <div id="gallery" class="gallery">
     <div class="container">
             <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
-            <p>Images will load as you scroll down!
+            <p class="text-center">
+                Professionelle Bilder von Professionellen Fotografen. Finden Auch sie den perfekten Fotografen für ihr Event!
             </p>            
      </div>  <!-- end-container -->
      <div class="container card">
@@ -58,17 +61,23 @@
 
                         <div class="subtitle">                   
                         <img class src="https://nadjaosieka.de/wp-content/uploads/2016/05/Fotobox-Loerrach-Basel-Fotograf-705x470.jpg" alt="">                              
-                        <span>300 Likes</span>
+                        <span>
+                                <i class="fa fa-heart" aria-hidden="true">  300</i>
+                            </span>
                         </div>
                     
                         <div class="subtitle"> 
                         <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
-                        <span>300 Likes</span>
+                        <span>
+                            <i class="fa fa-heart" aria-hidden="true">  300</i>
+                        </span>
                         </div>
                         
                             <div class="subtitle">
                             <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
-                            <span>300 Likes</span>
+                            <span>
+                                    <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                </span>
                             </div>
 
                             <div class="subtitle">
@@ -79,73 +88,95 @@
                             
                             <div class="subtitle">
                             <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                            <span>300 Likes</span>
+                            <span>
+                                    <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                </span>
                            </div>
 
                                 <div class="subtitle">
                                 <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
                             
                             <div class="subtitle">    
                             <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                            <span>300 Likes</span>
+                            <span>
+                                    <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                </span>
                             </div>
 
 
                                 <div class="subtitle">    
                                 <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
 
                                 <div class="subtitle">    
                                 <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                    <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                </span>
                                 </div>
 
                                 <div class="subtitle">    
-                                <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt=""><img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
-                                <span>300 Likes</span>
+                                <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
+                                </div>
+
+                                <div class="subtitle">
+                                <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
 
                                 <div class="subtitle">    
                                 <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
                                 
                                 <div class="subtitle">  
                                 <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <span>300 Likes</span>
-                                </div>
-
-                                <div class="subtitle">  
-                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
 
                                 <div class="subtitle">  
                                 <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
-                                <span>300 Likes</span>
+                                <span>
+                                        <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                    </span>
                                 </div>
 
                                     <div class="subtitle">  
                                     <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
-                                    <span>300 Likes</span>
+                                    <span>
+                                            <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                        </span>
                                     </div>
 
                                         <div class="subtitle">  
                                         <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
-                                        <span>300 Likes</span>
+                                        <span>
+                                                <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                            </span>
                                         </div>
 
                                         <div class="subtitle">  
                                         <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                        <span>300 Likes</span>
+                                        <span>
+                                                <i class="fa fa-heart" aria-hidden="true">  300</i>
+                                            </span>
                                         </div>
-                                <!-- <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
-                                <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt=""> -->
-                                
                     </div>
                     
                 </div>
@@ -159,62 +190,62 @@
     <!--Testimonial-Section-->
 <div id="testimonial" class="testimonial">
         <div class="container">
-                <h2>Testimonials</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                <h2>{{'LABELS.TESTIMONIALS'|translate}}</h2>
+                <p class="text-center">Egal ob Fotograf, Gast oder Organisator einer Veranstaltung - Wir unterstützen sie und garantieren maximale Zufriedenheit.
+                    Überzeugen sie sich selbst!
                 </p>
             <div class="row">           
                 <div class="col-md-4 mb-r">
                      <div class="avatar">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
                      </div>
-                    <h4 class="mb-3">Anna Deynah</h4>
-                    <h6 class="mb-3 font-bold grey-text">Web Designer</h6>
-                    <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                    <h4 class="mb-3">Stephan Naumann</h4>
+                    <h6 class="mb-3 font-bold grey-text">{{'LABELS.PHOTOGRAPHER'|translate}}</h6>
+                    <p><i class="fa fa-quote-left"></i>„Super Website um Kunden zu erreichen. Preis- Leistungsverhältnis von EventPicKing TOP. Werde
+                        weitere Zusammenarbeit gerne beibehalten.
                     <i class="fa fa-quote-right"></i></p>
                     <div class="orange-text" style="margin-top: 30px">
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
                         <i class="fa fa-star"> </i>
-                        <i class="fa fa-star-half-full"> </i>
                     </div><!--review1-end-->
                 </div> <!--col1-end-->
     
                 <div class="col-md-4 mb-r">
                     <div class="avatar">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
                     </div>
-                        <h4 class="mb-3">Joe Dohe</h4>
-                        <h6 class="mb-3 font-bold grey-text">Photographer</h6>
-                        <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                        <h4 class="mb-3">Leonie Dürr</h4>
+                        <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_ORGANISATOR'|translate}}</h6>
+                        <p><i class="fa fa-quote-left"></i>Traumhaft schöne Bilder unserer Hochzeit, die uns ein Leben lang begleiten werden. Vielen Dank für
+                            die professionelle Begleitung von unserem großen Tag. Fotografensuche ist benutzerfreundlich und
+                            leicht zu bedienen. EventPicKing zu 100% empfehlenswert.
                         <i class="fa fa-quote-right"></i></p>
                         <div class="orange-text"  style="margin-top: 30px">
                             <i class="fa fa-star"> </i>
                             <i class="fa fa-star"> </i>
                             <i class="fa fa-star"> </i>
-                            <i class="fa fa-star-half-full"> </i>
-                            <i class="fa fa-star-empty"> </i>
+                            <i class="fa fa-star"> </i>
+                            <i class="fa fa-star"> </i>
                         </div><!--review2-end-->
                     </div> <!--col2-end-->
     
                     <div class="col-md-4 mb-r">
                         <div class="avatar">
-                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
                         </div> 
-                            <h4 class="mb-3">Maria Kate</h4>
-                            <h6 class="mb-3 font-bold grey-text">Wedding Planner</h6>
-                            <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                            <h4 class="mb-3">Marianne Faust</h4>
+                            <h6 class="mb-3 font-bold grey-text">{{'LABELS.EVENT_GUEST'|translate}}</h6>
+                            <p><i class="fa fa-quote-left"></i>Schöne Bilder von der Hochzeit meiner Cousine in Darmstadt-Wixhausen. Fotos sind einfach zu
+                                erwerben und gleich über eine (Wunsch)Druckerei druckbar. PayPal wird unterstützt.
                             <i class="fa fa-quote-right"></i></p>
                             <div class="orange-text"  style="margin-top: 30px">
                                 <i class="fa fa-star"> </i>
                                 <i class="fa fa-star"> </i>
                                 <i class="fa fa-star"> </i>
                                 <i class="fa fa-star"> </i>
-                                <i class="fa fa-star"> </i>
+                                <i class="fa fa-star-half-full"> </i>
                             </div><!--review3-end-->
                         </div> <!--col3-end-->
             </div><!--row-end-->
