--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -1,73 +1,72 @@
 <div class="card">
-  <h3 class="card-header indigo white-text">Eventname</h3>
+  <h3 class="card-header indigo white-text">{{ event?.name }}</h3>
   <div class="card-body">
-    <h4 class="card-title">Datum und Ort</h4>
-    <p class="card-text">Beschreibung</p>
+    <h4 class="card-title">{{ event?.date }} - {{event?.location }}</h4>
+    <p class="card-text">{{ event?.description }}</p>
   </div>
 </div>
 
 <br>
 <br>
 
-<nav id="main_menu">
-  <mdb-tabset [buttonClass]="'nav-tabs tabs-3 indigo'" [contentClass]="''">
-    <mdb-tab heading="{{ 'TEXTS.EVENT_ALL_PICTURES' | translate}}">
-      <div class="col">
-        <div class="row no-gutters justify-content-start" style="align-items: center">
+<mdb-tabset [buttonClass]="'nav-tabs indigo'" [contentClass]="''">
+  <mdb-tab heading="{{ 'TEXTS.EVENT_ALL_PICTURES' | translate}}">
+    <div class="col">
+      <div class="row no-gutters justify-content-start" style="align-items: center">
 
-          <div class="col-3">
-            <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" href="" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
-          </div>
+        <div class="col-3">
+          <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
+        </div>
 
-          <div class="col-4">
-            <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
-          </div>
+        <div class="col-4">
+          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+        </div>
 
-          <div class="col-1"></div>
+        <div class="col-1"></div>
 
-          <div class="col-3">
-            <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
-              <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
-              <label for="search_photo"></label>
-            </div>
-          </div>
-
-          <div class="col-1">
-            <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
-              <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
-            </a>
-            &nbsp;&nbsp;
-            <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
-              <i class="fa fa-th fa-2x" aria-hidden="true"></i>
-            </a>
+        <div class="col-3">
+          <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
+            <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
+            <label for="search_photo"></label>
           </div>
         </div>
-      </div>
-      <br>
 
-      <!-- BILD -->
-      <table>
-        <td>
-          <div class="card align-items-center">
-            <img class="img-fluid" src="https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg"
-              width="328" height="250" alt="Card image cap" div class="box1">
+        <div class="col-1">
+          <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5">
+            <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
+          </a>
+          &nbsp;&nbsp;
+          <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5">
+            <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+    <br>
+
+    <!-- BILD -->
+    <table>
+      <td>
+        <div class="card-columns">
+          <div class="card align-items-center" *ngFor="let image of (images  | async ); let i = index">
+            <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
             <div class="card-body">
               <table>
                 <td>
-                  <a href="#" class="icon-button" id="Button_Bild1_markieren" style="color: #3f51b5">
+                  <a class="icon-button" id="button_picture{{i}}_mark" style="color: #3f51b5">
                     <i class="fa fa-star fa-3x" aria-hidden="true">&nbsp;</i>
                   </a>
                 </td>
 
                 <td>
-                  <a href="#" class="icon-button" id="Button_Bild1_liken" style="color: #3f51b5">
+                  <a class="icon-button" id="button_picture{{i}}_like" style="color: #3f51b5">
                     &nbsp;
                     <i class="fa fa-heart fa-3x" aria-hidden="true">&nbsp;</i>
                   </a>
                 </td>
 
                 <td>
-                  <a href="#" class="icon-button" id="Button_Bild1_melden" style="color: #3f51b5">
+                  <a class="icon-button" id="button_picture{{i}}_report" style="color: #3f51b5">
                     &nbsp;
                     <i class="fa fa-exclamation-triangle fa-3x" aria-hidden="true">&nbsp;</i>
                   </a>
@@ -75,40 +74,42 @@
               </table>
             </div>
           </div>
-        </td>
-      </table>
-      <!-- BILD -->
-    </mdb-tab>
+        </div>
+      </td>
+    </table>
+    <!-- BILD -->
+  </mdb-tab>
 
-    <mdb-tab heading="{{ 'TEXTS.EVENT_SELECTED_PICTURES' | translate}}">
-      <div class="col">
-        <div class="row no-gutters justify-content-start" style="align-items: center">
+  <mdb-tab heading="{{ 'TEXTS.EVENT_SELECTED_PICTURES' | translate}}">
+    <div class="col">
+      <div class="row no-gutters justify-content-start" style="align-items: center">
 
-          <div class="col-4">
-            <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" href="" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
-          </div>
+        <div class="col-4">
+          <a class="btn btn-indigo darken-2 waves-light" id="button_add_choosen_to_card" mdbRippleRadius>{{ 'BUTTONS.ADD_PICTURES_TO_CARD' | translate }}</a>
+        </div>
 
-          <div class="col-4"></div>
+        <div class="col-4"></div>
 
-          <div class="col-3">
-            <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
-              <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
-              <label for="search_photo"></label>
-            </div>
-          </div>
-
-          <div class="col-1">
-            <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5" href="">
-              <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
-            </a>
-            &nbsp;&nbsp;
-            <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5" href="">
-              <i class="fa fa-th fa-2x" aria-hidden="true"></i>
-            </a>
+        <div class="col-3">
+          <div class="md-form form-sm" style="margin-right: 30px; margin-left: 20px">
+            <input placeholder="{{ 'TEXTS.SEARCH_PICTURES' | translate }}" type="text" id="search_photo" class="form-control">
+            <label for="search_photo"></label>
           </div>
         </div>
+
+        <div class="col-1">
+          <a class="icon-button lessVertical" id="button_two_pictures_per_row" style="color: #3f51b5">
+            <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
+          </a>
+          &nbsp;&nbsp;
+          <a class="icon-button lessVertical" id="button_three_pictures_per_row" style="color: #3f51b5">
+            <i class="fa fa-th fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
       </div>
-      <br>
-    </mdb-tab>
-  </mdb-tabset>
-</nav>
+    </div>
+    <br>
+  </mdb-tab>
+</mdb-tabset>
+
+<app-picture-detail #pictureModal></app-picture-detail>
