--- a/src/app/pages/photographer-search-page/photographer-search-page.component.html
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.html
@@ -10,23 +10,39 @@
           <div *ngIf="p.premium == true">
             <div class="card">
               <div class="card-body">
-                <p class="card-text">
-                  <img class="profile-img" src="{{p.photoUrl}}"> {{ p.name }}</p>
-                <p>{{p.address.street}} {{p.address.streetnumber}}
-                  <br/> {{p.address.zip}} {{p.address.city}}
-                  <br/> {{p.email}}
-                </p>
+                <p class="name">{{ p.name }}</p>
+                <div class="content">
+                  <img class="profile-img" src="{{p.photoUrl}}">
+                  <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
+                    <br/> {{p.address.zip}} {{p.address.city}}
+                    <br/>
+                  </div>
+                </div>
+                <br/>
+
+                <div class="distance">
+                  {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <hr class="mt-4 mb-4 border">
         <div *ngFor="let p of (photographer | async)">
           <div *ngIf="p.premium == false">
             <div class="card">
               <div class="card-body">
-                <p class="card-text text-left">
-                  {{ p.name }}
-                </p>
+                <p class="name">{{ p.name }}</p>
+                <div>
+                  <div *ngIf="p.address" class="address">{{p.address.street}} {{p.address.streetnumber}}
+                    <br/> {{p.address.zip}} {{p.address.city}}
+                    <br/>
+                  </div>
+                </div>
+                <br/>
+                <div class="distance">
+                  {{getPhotographerDistance(p) | number:'0.2-2' | replace:'.':','}} km
+                </div>
               </div>
             </div>
           </div>
@@ -37,15 +53,24 @@
       <agm-map #map class="card mapformat">
         <agm-marker *ngFor="let p of (photographer | async); let i = index" [latitude]="p.location.lat" [longitude]="p.location.lng"
           [title]="p.name" [zIndex]="i">
-          <agm-snazzy-info-window [maxWidth]="200" [closeWhenOthersOpen]="true">
+          <agm-snazzy-info-window [maxWidth]="300" [closeWhenOthersOpen]="true" [maxHeight]="300">
             <ng-template>
-              <div class="text-left">
-                {{ p.name }}
-                <br> {{ p.address.street }}
-                <br> {{ p.address.zip }} - {{ p.address.city }} {{ p.address.street }}
-                <br> Tel: {{ p.phone }}
-                <br>
-                <a>Profile</a>
+              <div>
+                <span class="name">
+                  <b>{{ p.name }}</b>
+                </span>
+                <div class="content">
+                  <div>
+                    <img *ngIf="p.premium == true" class="content-img" src="{{p.photoUrl}}">
+                    <br/>
+                  </div>
+                  {{ p.address.street }} {{p.address.streetnumber}}
+                  <br> {{ p.address.zip }} {{ p.address.city }}
+                  <br> Tel: {{ p.phone }}
+                  <br>
+                </div>
+                <a routerLink="">Profile</a>
+
               </div>
             </ng-template>
           </agm-snazzy-info-window>
