--- a/src/app/pages/photographer-search-page/photographer-search-page.component.scss
+++ b/src/app/pages/photographer-search-page/photographer-search-page.component.scss
@@ -1,7 +1,18 @@
 .profile-img {
   border-radius: 50%;
-  max-width: 50px;
-  max-height: 50px;
+  height: 50px;
+  width: 50px;
+  margin-right: 30px;
+  vertical-align: middle;
+  float: left;
+}
+
+.content-img {
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .scrollable {
@@ -15,11 +26,38 @@
 }
 
 .card {
-  margin: 10px;
+  margin: 5px;
 }
 
-.card-text {
-  font-size: 18px;
-  vertical-align: top;
+.name {
+  font-size: 16px;
+  color: #3f51b5;
+  vertical-align: center;
   text-align: center;
+}
+
+.distance {
+  text-align: right;
+  margin-bottom: 0px;
+}
+
+.address {
+  font-size: 11px;
+  float: left;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.card-body {
+  padding: 15px;
+}
+
+.border {
+  border-width: 4px;
+}
+
+.content {
+  text-align: center;
+  margin-top: 3px;
+  margin-bottom: 5px;
 }
